# service-harness-demo

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/plans/: 2026-01-17-demo-loop-design.md
prompts/: 00.INITIAL.md
scripts/: deploy.sh  simulate_traffic.py
service-harness/: .env.example  .gitignore  pyproject.toml
service-harness/docs/plans/: 2026-01-17-foundation-design.md
service-harness/scripts/: validate_grafana.py
service-harness/src/harness/: cli.py  config.py  schemas.py
service-harness/src/harness/agent/: __init__.py  runner.py  tools.py
service-harness/src/harness/grafana/: loki.py  prometheus.py
service-harness/src/harness/monitor/: __init__.py  analyst.py  scheduler.py  slo_evaluator.py
service-harness/src/harness/web/: app.py
service-harness/tests/: conftest.py  test_agent.py  test_api_invariants.py  test_api_slos.py  test_api_tickets.py
src/harness/: __init__.py  cli.py  config.py  database.py  models.py  supervisor.py
src/harness/agent/: __init__.py  runner.py
src/harness/grafana/: __init__.py  loki.py  prometheus.py
src/harness/monitor/: __init__.py  invariant_evaluator.py  runner.py  scheduler.py
src/harness/service/: __init__.py  rate_limiter.py  token_bucket.py
src/harness/web/: __init__.py  app.py
src/harness/web/routes/: invariants.py  tickets.py
subjects/ratelimiter/: AGENTS.md  agent_hints.yaml  invariants.yaml  pyproject.toml
subjects/ratelimiter/src/: __init__.py  app.py  bucket.py  main.py  metrics.py
subjects/ratelimiter/tests/: __init__.py  test_bucket.py
tests/: __init__.py  conftest.py  test_grafana.py  test_models.py  test_monitor.py  test_service.py
(+1 files in other folders)
